--- a/app/src/main/res/layout/load_more.xml
+++ b/app/src/main/res/layout/load_more.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -17,3 +18,4 @@
         android:text="Loading..."
         android:textColor="@android:color/black" />
 </LinearLayout>
+</layout>
